--- a/src/main/js/html/dashboard.html
+++ b/src/main/js/html/dashboard.html
@@ -1,13 +1,9 @@
 <article class="container_12">
   <div class="columns">
-    <dd4-table class="colx2-left" metadata="TableType.PENDING_INTAKE"></dd4-table>
-    <dd4-table class="colx2-right" metadata="TableType.UNCONFIRMED"></dd4-table>
+    <dd4-table class="colx2-left" data-ng-if="iisCtrl.flags.pendingIntakeEnabled" metadata="TableType.PENDING_INTAKE"></dd4-table>
+    <dd4-table class="colx2-right" data-ng-if="iisCtrl.flags.licenseAlertEnabled" metadata="TableType.LICENSE_ALERT"></dd4-table>
   </div>
-  <iis-pending-assessments  class="columns" purpose="Pending"></iis-pending-assessments>
-  <div class="columns">
-    <dd4-table class="colx2-left" metadata="TableType.REVIEWABLE"></dd4-table>
-    <dd4-table class="colx2-right" metadata="TableType.LICENSE_ALERT"></dd4-table>
-  </div>
-  <div class="columns"><iis-calendar data-on-update="$ctrl.refreshTables()"></iis-calendar></div>
-  <iis-payable class="columns" purpose="Billable"></iis-payable>
+  <dd4-table class="columns" data-ng-if="iisCtrl.flags.pendingAssessmentsEnabled" metadata="TableType.PENDING_ASSESSMENT"></dd4-table>
+  <iis-calendar class="columns" data-ng-if="iisCtrl.flags.calendarEnabled" data-on-update="$ctrl.refreshTables()"></iis-calendar>
+  <iis-payable class="columns" data-ng-if="iisCtrl.flags.billableEnabled" purpose="Billable"></iis-payable>
 </article>
